# NutriSnap

./: README.md  docker-compose.yml  pyproject.toml  train.py
app/: Dockerfile  package.json
src/: .dockerignore  Dockerfile  Dockerfile.preprocess  Dockerfile.train  docker-compose.yml  preprocess.py  train.py  train_only.py  transforms.py
